# nrt-defense

./: .gitignore  CHANGELOG.md  Makefile  POST.md  README.md  SECURITY.md  pyproject.toml  run_bench_qwen.py  vulnmap-fix.patch
.github/workflows/: tests.yml
src/nrt_defense/: __init__.py  cli.py
src/nrt_defense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/nrt_defense/core/: analyzer.py  benchmarker.py  cmpe.py  csf_monitor.py  misdirection.py  vulnerability_mapper.py
src/nrt_defense/eval/: mock_loader.py  qwen_judge.py
src/nrt_defense/utils/: bench_loader.py
tests/fixtures/: mock_nrt_attacks.json
tests/integration/: test_benchmark.py
tests/unit/: test_cli.py  test_cmpe.py  test_core.py  test_qwen_judge.py
